adjust padding on latest releases grid to stop overlap on 915px wide screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -233,7 +233,7 @@ footer {
 }
 
 .grid-item {
-    padding: 10px;
+    padding: 20px;
 }
 
 img {
